Add myserviceaccount.json to .gitignore and update project files

--- a/Startsida.html
+++ b/Startsida.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Hantverksporten - Din lokala hjälpreda</h1>
         <nav>
-            <a href="Startsida.html" class="nav-link">Hem</a>
+            <a href="index.html" class="nav-link">Hem</a>
             <a href="Komigang.html" class="nav-link">Kom igång</a>
             <a href="varafunktioner.html" class="nav-link">Våra funktioner</a>
             <a href="kontakta-oss.html" class="nav-link">Kontakta oss</a>
@@ -27,32 +27,32 @@
 
     <div class="process-container">
         <div class="step">
-            <img src="images/map_1.png" alt="Registrera">
+            <img src="C:\Users\oscar\OneDrive\Skrivbord\Fixly\ikoner\map_1.png" alt="Registrera">
             <p>Hitta kund eller hantverkare</p>
         </div>
         <div class="arrow">→</div>
         <div class="step">
-            <img src="images/customers_2.png" alt="Kontakt">
+            <img src="C:\Users\oscar\OneDrive\Skrivbord\Fixly\ikoner\customers_2.png" alt="Kontakt">
             <p>Kontakt och urval</p>
         </div>
         <div class="arrow">→</div>
         <div class="step">
-            <img src="images/openrequest_5.png" alt="Offert">
+            <img src="C:\Users\oscar\OneDrive\Skrivbord\Fixly\ikoner\openrequest_5.png" alt="Offert">
             <p>Offertförfrågan</p>
         </div>
         <div class="arrow">→</div>
         <div class="step">
-            <img src="images/deal_2.png" alt="Godkännande">
+            <img src="C:\Users\oscar\OneDrive\Skrivbord\Fixly\ikoner\deal_6.png" alt="Godkännande">
             <p>Offerthantering och godkännande</p>
         </div>
         <div class="arrow">→</div>
         <div class="step">
-            <img src="images/worksymbol_7.png" alt="Arbete">
+            <img src="C:\Users\oscar\OneDrive\Skrivbord\Fixly\ikoner\worksymbol_7.png" alt="Arbete">
             <p>Följ arbetet</p>
         </div>
         <div class="arrow">→</div>
         <div class="step">
-            <img src="images/Payment_8.png" alt="Betalning">
+            <img src="C:\Users\oscar\OneDrive\Skrivbord\Fixly\ikoner\Payment_8.png" alt="Betalning">
             <p>Genomgång och betalning</p>
         </div>
     </div>
